<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="16dp"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ProgressBar
        android:id="@+id/dataloading_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="?android:colorAccent"
        android:indeterminateTintMode="src_in"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/item_icon"
        android:layout_gravity="center_vertical"
        android:transitionName="@string/type_icon_transition"
        android:contentDescription="@string/item_logo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/type_name"
        android:layout_margin="16dp"
        android:transitionName="@string/type_name_transition"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/item_icon"
        app:layout_constraintBottom_toBottomOf="@id/item_icon"
        app:layout_constraintLeft_toRightOf="@id/item_icon"/>

    <include
        android:id="@+id/details_layout"
        layout="@layout/attributes_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_icon"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/details_layout">

        <TextView
            android:id="@+id/type_description"
            android:textAlignment="center"
            style="@style/TextAppearance.AppCompat.Body1"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>
