<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="20dp"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginEnd="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginStart="16dp"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal"
            style="@style/Base.TextAppearance.AppCompat.SearchResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/mass_label"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/mass_value"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="16dp"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal"
            style="@style/Base.TextAppearance.AppCompat.SearchResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/volume_label"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/volume_value"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal"
            style="@style/Base.TextAppearance.AppCompat.SearchResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/portion_label"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/portion_value"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal"
            style="@style/Base.TextAppearance.AppCompat.SearchResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/capacity_label"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/capacity_value"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

